# SimplePong

./: CMakeLists.txt  README.md
include/glad/: glad.h
shaderFiles/: Sshader.frag  Sshader.vs  textShader.frag  textShader.vs
src/: BSD.cpp  BSD.h  Ball.cpp  Ball.h  Game.cpp  Game.h  LeftPaddle.cpp  LeftPaddle.h  Paddle.cpp  Paddle.h  RightPaddle.cpp  RightPaddle.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  glad.c  main.cpp
